--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>rituals._ - Roblox Developer Portfolio</title>
-    <meta name="description" content="Professional Roblox developer specializing in scripting, UI/UX, and game systems. Available for commissions and collaborations.">
+    <title>rituals._ - Portfolio</title>
+    <meta name="description" content="Roblox developer specializing in scripting, UI/UX, and game systems. Available for commissions and collaborations.">
     <meta property="og:title" content="rituals._ - Roblox Developer">
     <meta property="og:description" content="Professional Roblox developer with 4+ years experience in scripting and game development">
     <meta property="og:type" content="website">
@@ -974,7 +974,7 @@
     </button>
 
     <script>
-        // Project data
+        // Project data (systems, scripting, ui, games)
         const projects = [
             {
                 title: "Advanced Inventory System",
@@ -984,53 +984,11 @@
                 icon: "fas fa-boxes"
             },
             {
-                title: "Trading System",
-                category: "scripting",
-                tags: ["Scripting", "Security", "UI"],
-                description: "Secure player-to-player trading system with validation, anti-exploit measures, and transaction logging.",
-                icon: "fas fa-handshake"
-            },
-            {
-                title: "RPG Quest Manager",
+                title: "Advanced Inventory System",
                 category: "systems",
-                tags: ["RPG", "Systems", "DataStore"],
-                description: "Flexible quest system supporting multiple quest types, progress tracking, and reward distribution.",
-                icon: "fas fa-scroll"
-            },
-            {
-                title: "Modern Admin Panel",
-                category: "ui",
-                tags: ["UI", "Admin", "Scripting"],
-                description: "Clean, intuitive admin interface with role-based permissions and extensive moderation tools.",
-                icon: "fas fa-user-shield"
-            },
-            {
-                title: "Survival Game Core",
-                category: "games",
-                tags: ["Full Game", "Survival", "Systems"],
-                description: "Complete survival game foundation with hunger, thirst, crafting, and base-building systems.",
-                icon: "fas fa-campground"
-            },
-            {
-                title: "Custom GUI Framework",
-                category: "ui",
-                tags: ["UI", "Framework", "Reusable"],
-                description: "Modular GUI framework for rapid UI development with consistent styling and animations.",
-                icon: "fas fa-window-maximize"
-            },
-            {
-                title: "Vehicle System",
-                category: "scripting",
-                tags: ["Vehicles", "Physics", "Scripting"],
-                description: "Realistic vehicle physics system with customizable handling, damage, and fuel mechanics.",
-                icon: "fas fa-car"
-            },
-            {
-                title: "Battle Royale Framework",
-                category: "games",
-                tags: ["Battle Royale", "Multiplayer", "Systems"],
-                description: "Scalable battle royale game framework with zone mechanics, loot spawning, and match management.",
-                icon: "fas fa-crosshairs"
+                tags: ["Lua", "DataStore", "UI"],
+                description: "Complete inventory management system with drag-and-drop functionality, item stacking, and persistent storage.",
+                icon: "fas fa-boxes"
             }
         ];
 
