--- a/index.html
+++ b/index.html
@@ -1194,9 +1194,59 @@
     </button>
 
     <script>
-        // Project data with enhanced images
         const projects = [
-            
+            {
+                title: "Rocord (v2)",
+                category: "games",
+                tags: ["Lua", "DataStore", "UI"],
+                description: "Work In Progress recreation of Discord but on Roblox, currently unfinished. 1:1 Replica of the current Discord UI. Mostly uncoded.",
+                type: "game",
+                image: "https://cdn.discordapp.com/attachments/1374425251718365285/1388882418282270871/image.png?ex=6862990c&is=6861478c&hm=54b1243a6e6aa355ec68939861abcf23edc26bf0b7ba189b834345061a2cc157&",
+                icon: "fas fa-user-friends",
+                images: [
+                    "https://cdn.discordapp.com/attachments/1374425251718365285/1388882418282270871/image.png?ex=6862990c&is=6861478c&hm=54b1243a6e6aa355ec68939861abcf23edc26bf0b7ba189b834345061a2cc157&"
+                ],
+                gameLink: "https://www.roblox.com/games/108293432688169/rocord-v2"
+            },
+            {
+                title: "WORDLE 🧩",
+                category: "games",
+                tags: ["Lua", "DataStore", "UI"],
+                description: "Currently being recoded. Fully fledged wordle game remade on Roblox. with dynamic word list updateable through github.",
+                type: "game",
+                image: "https://tr.rbxcdn.com/180DAY-8c0c8e015451edaa4b895dd45d3493fa/768/432/Image/Webp/noFilter",
+                icon: "fas fa-user-friends",
+                images: [
+                    "https://tr.rbxcdn.com/180DAY-8c0c8e015451edaa4b895dd45d3493fa/768/432/Image/Webp/noFilter"
+                ],
+                gameLink: "https://www.roblox.com/games/17362516283/WORDLE"
+            },
+            {
+                title: "Dust II",
+                category: "games",
+                tags: ["Building"],
+                description: "Work In Progress recreation of the map Dust II from CS2. This is currently just the outline the finished project will be more detailed.",
+                type: "game",
+                image: "https://cdn.discordapp.com/attachments/1374425251718365285/1388882016254034091/image.png?ex=686298ac&is=6861472c&hm=b9e19fe99fae423e138b9aa67f4ed4b757df2e0d3d7b5c28853a4fe0b640abfe&",
+                icon: "fas fa-user-friends",
+                images: [
+                    "https://cdn.discordapp.com/attachments/1374425251718365285/1388882016254034091/image.png?ex=686298ac&is=6861472c&hm=b9e19fe99fae423e138b9aa67f4ed4b757df2e0d3d7b5c28853a4fe0b640abfe&"
+                ],
+                gameLink: "https://www.roblox.com/games/15861672687/WIP-Dust-2-CS-GO"
+            },
+            {
+                title: "Custom Kick Message",
+                category: "games",
+                tags: ["Lua", "DataStore", "UI"],
+                description: "Basic game made for creating fake kick messages with a 1:1 replica of the roblox kick ui.",
+                type: "game",
+                image: "https://tr.rbxcdn.com/180DAY-9c98a27a5d37e1e14341f5530827f53e/768/432/Image/Webp/noFilter",
+                icon: "fas fa-user-friends",
+                images: [
+                    "https://tr.rbxcdn.com/180DAY-9c98a27a5d37e1e14341f5530827f53e/768/432/Image/Webp/noFilter"
+                ],
+                gameLink: "https://www.roblox.com/games/18927322378/Custom-Kick-Message"
+            },
         ];
 
         // Typing animation
