--- a/index.html
+++ b/index.html
@@ -1209,6 +1209,32 @@
                 gameLink: "https://www.roblox.com/games/108293432688169/rocord-v2"
             },
             {
+                title: "Stimulation Clicker",
+                category: "games",
+                tags: ["Lua", "DataStore", "UI"],
+                description: "neal.fun Stimulation Clicker game remade on Roblox. Currently unfinished, but has a lot of the features from the original game.",
+                type: "game",
+                image: "https://tr.rbxcdn.com/180DAY-50da6ffd08e3d45f0a5b456da3ff2b7a/768/432/Image/Webp/noFilter",
+                icon: "fas fa-user-friends",
+                images: [
+                    "https://tr.rbxcdn.com/180DAY-50da6ffd08e3d45f0a5b456da3ff2b7a/768/432/Image/Webp/noFilter"
+                ],
+                gameLink: "https://www.roblox.com/games/105770466068871/WIP-Stimulation-Clicker"
+            },
+            {
+                title: "Gun Framework",
+                category: "systems",
+                tags: ["Lua", "Guns", "Framework"],
+                description: "Unfinished gun framework for Roblox, currently has basic gun functionality and a few guns. This is a framework so it can be used in any game. Not my models but all the code is mine.",
+                type: "game",
+                image: "https://cdn.discordapp.com/attachments/1348657462299066398/1389221930342547669/image.png?ex=6863d53e&is=686283be&hm=adca071a3a60c88aa755cd54671f357fa08660b5d2519961db1f5d451b043f53&",
+                icon: "fas fa-user-friends",
+                images: [
+                    "https://cdn.discordapp.com/attachments/1348657462299066398/1389221930342547669/image.png?ex=6863d53e&is=686283be&hm=adca071a3a60c88aa755cd54671f357fa08660b5d2519961db1f5d451b043f53&"
+                ],
+                gameLink: "https://www.roblox.com/games/18162063944/fps-game-2"
+            },
+            {
                 title: "WORDLE 🧩",
                 category: "games",
                 tags: ["Lua", "DataStore", "UI"],
@@ -1220,6 +1246,45 @@
                     "https://tr.rbxcdn.com/180DAY-8c0c8e015451edaa4b895dd45d3493fa/768/432/Image/Webp/noFilter"
                 ],
                 gameLink: "https://www.roblox.com/games/17362516283/WORDLE"
+            },
+            {
+                title: "Don't Press Skibidi Toilet!",
+                category: "games",
+                tags: ["Commission", "Lua", "UI"],
+                description: "Commission game for a client, exactly how they wanted it. The game is a simple game where you have to click the skibidi toilet to start an in-game event. The game is fully functional and has a lot of features.",
+                type: "game",
+                image: "https://tr.rbxcdn.com/180DAY-1f84140fffd75a98834874349d19d583/768/432/Image/Webp/noFilter",
+                icon: "fas fa-user-friends",
+                images: [
+                    "https://tr.rbxcdn.com/180DAY-1f84140fffd75a98834874349d19d583/768/432/Image/Webp/noFilter"
+                ],
+                gameLink: "https://www.roblox.com/games/136511520856604/Dont-Press-Skibidi-Toilet-Morphs"
+            },
+            {
+                title: "Mirage",
+                category: "games",
+                tags: ["Building"],
+                description: "Work in Progress recreation of the map Mirage from CS2. This is currently just the outline the finished project will be more detailed. Current screenshot shows old version very unfinished of the map, new version is being worked on.",
+                type: "game",
+                image: "https://cdn.discordapp.com/attachments/1348657462299066398/1389227000459296809/image.png?ex=6863d9f7&is=68628877&hm=9491f47a3cbc280f44a438fab3fc6bab44508095f31c17c07d23b11e396a4b94&",
+                icon: "fas fa-user-friends",
+                images: [
+                    "https://cdn.discordapp.com/attachments/1348657462299066398/1389227000459296809/image.png?ex=6863d9f7&is=68628877&hm=9491f47a3cbc280f44a438fab3fc6bab44508095f31c17c07d23b11e396a4b94&"
+                ],
+                gameLink: "https://www.roblox.com/games/13884884683/de-mirage"
+            },
+            {
+                title: "Outdoor forest scene",
+                category: "games",
+                tags: ["Building"],
+                description: "Simple forest scene made for a client, the scene is fully functional and has a lot of features. The scene is made with a lot of detail and has a lot of trees and bushes. (Current game is privated due to client request)",
+                type: "game",
+                image: "https://cdn.discordapp.com/attachments/1348657462299066398/1389225192320008372/image.png?ex=6863d848&is=686286c8&hm=d2919fd5968eaf93dc47a1d126e1a5d8a010e8520294e85448189f45731852cc&",
+                icon: "fas fa-user-friends",
+                images: [
+                    "https://cdn.discordapp.com/attachments/1348657462299066398/1389225192320008372/image.png?ex=6863d848&is=686286c8&hm=d2919fd5968eaf93dc47a1d126e1a5d8a010e8520294e85448189f45731852cc&"
+                ],
+                gameLink: "https://www.roblox.com/games/123371158212350/building-place"
             },
             {
                 title: "Dust II",
