--- a/index.html
+++ b/index.html
@@ -1208,37 +1208,11 @@
                 ],
                 gameLink: "https://www.roblox.com/games/108293432688169/rocord-v2"
             },
-            {
-                title: "Stimulation Clicker",
-                category: "games",
-                tags: ["Lua", "DataStore", "UI"],
-                description: "neal.fun Stimulation Clicker game remade on Roblox. Currently unfinished, but has a lot of the features from the original game.",
-                type: "game",
-                image: "https://tr.rbxcdn.com/180DAY-50da6ffd08e3d45f0a5b456da3ff2b7a/768/432/Image/Webp/noFilter",
-                icon: "fas fa-user-friends",
-                images: [
-                    "https://tr.rbxcdn.com/180DAY-50da6ffd08e3d45f0a5b456da3ff2b7a/768/432/Image/Webp/noFilter"
-                ],
-                gameLink: "https://www.roblox.com/games/105770466068871/WIP-Stimulation-Clicker"
-            },
-            {
-                title: "Gun Framework",
-                category: "systems",
-                tags: ["Lua", "Guns", "Framework"],
-                description: "Unfinished gun framework for Roblox, currently has basic gun functionality and a few guns. This is a framework so it can be used in any game. Not my models but all the code is mine.",
-                type: "game",
-                image: "https://cdn.discordapp.com/attachments/1348657462299066398/1389221930342547669/image.png?ex=6863d53e&is=686283be&hm=adca071a3a60c88aa755cd54671f357fa08660b5d2519961db1f5d451b043f53&",
-                icon: "fas fa-user-friends",
-                images: [
-                    "https://cdn.discordapp.com/attachments/1348657462299066398/1389221930342547669/image.png?ex=6863d53e&is=686283be&hm=adca071a3a60c88aa755cd54671f357fa08660b5d2519961db1f5d451b043f53&"
-                ],
-                gameLink: "https://www.roblox.com/games/18162063944/fps-game-2"
-            },
-            {
+                        {
                 title: "WORDLE 🧩",
                 category: "games",
                 tags: ["Lua", "DataStore", "UI"],
-                description: "Currently being recoded. Fully fledged wordle game remade on Roblox. with dynamic word list updateable through github.",
+                description: "(Averages 15 players daily) Currently being recoded. Fully fledged wordle game remade on Roblox. with dynamic word list updateable through github.",
                 type: "game",
                 image: "https://tr.rbxcdn.com/180DAY-8c0c8e015451edaa4b895dd45d3493fa/768/432/Image/Webp/noFilter",
                 icon: "fas fa-user-friends",
@@ -1246,19 +1220,6 @@
                     "https://tr.rbxcdn.com/180DAY-8c0c8e015451edaa4b895dd45d3493fa/768/432/Image/Webp/noFilter"
                 ],
                 gameLink: "https://www.roblox.com/games/17362516283/WORDLE"
-            },
-            {
-                title: "Don't Press Skibidi Toilet!",
-                category: "games",
-                tags: ["Commission", "Lua", "UI"],
-                description: "Commission game for a client, exactly how they wanted it. The game is a simple game where you have to click the skibidi toilet to start an in-game event. The game is fully functional and has a lot of features.",
-                type: "game",
-                image: "https://tr.rbxcdn.com/180DAY-1f84140fffd75a98834874349d19d583/768/432/Image/Webp/noFilter",
-                icon: "fas fa-user-friends",
-                images: [
-                    "https://tr.rbxcdn.com/180DAY-1f84140fffd75a98834874349d19d583/768/432/Image/Webp/noFilter"
-                ],
-                gameLink: "https://www.roblox.com/games/136511520856604/Dont-Press-Skibidi-Toilet-Morphs"
             },
             {
                 title: "Mirage",
@@ -1298,6 +1259,45 @@
                     "https://cdn.discordapp.com/attachments/1374425251718365285/1388882016254034091/image.png?ex=686298ac&is=6861472c&hm=b9e19fe99fae423e138b9aa67f4ed4b757df2e0d3d7b5c28853a4fe0b640abfe&"
                 ],
                 gameLink: "https://www.roblox.com/games/15861672687/WIP-Dust-2-CS-GO"
+            },
+            {
+                title: "Stimulation Clicker",
+                category: "games",
+                tags: ["Lua", "DataStore", "UI"],
+                description: "neal.fun Stimulation Clicker game remade on Roblox. Currently unfinished, but has a lot of the features from the original game.",
+                type: "game",
+                image: "https://tr.rbxcdn.com/180DAY-50da6ffd08e3d45f0a5b456da3ff2b7a/768/432/Image/Webp/noFilter",
+                icon: "fas fa-user-friends",
+                images: [
+                    "https://tr.rbxcdn.com/180DAY-50da6ffd08e3d45f0a5b456da3ff2b7a/768/432/Image/Webp/noFilter"
+                ],
+                gameLink: "https://www.roblox.com/games/105770466068871/WIP-Stimulation-Clicker"
+            },
+            {
+                title: "Gun Framework",
+                category: "systems",
+                tags: ["Lua", "Guns", "Framework"],
+                description: "Unfinished gun framework for Roblox, currently has basic gun functionality and a few guns. This is a framework so it can be used in any game. Not my models but all the code is mine.",
+                type: "game",
+                image: "https://cdn.discordapp.com/attachments/1348657462299066398/1389221930342547669/image.png?ex=6863d53e&is=686283be&hm=adca071a3a60c88aa755cd54671f357fa08660b5d2519961db1f5d451b043f53&",
+                icon: "fas fa-user-friends",
+                images: [
+                    "https://cdn.discordapp.com/attachments/1348657462299066398/1389221930342547669/image.png?ex=6863d53e&is=686283be&hm=adca071a3a60c88aa755cd54671f357fa08660b5d2519961db1f5d451b043f53&"
+                ],
+                gameLink: "https://www.roblox.com/games/18162063944/fps-game-2"
+            },
+            {
+                title: "Don't Press Skibidi Toilet!",
+                category: "games",
+                tags: ["Commission", "Lua", "UI"],
+                description: "Commission game for a client, exactly how they wanted it. The game is a simple game where you have to click the skibidi toilet to start an in-game event. The game is fully functional and has a lot of features.",
+                type: "game",
+                image: "https://tr.rbxcdn.com/180DAY-1f84140fffd75a98834874349d19d583/768/432/Image/Webp/noFilter",
+                icon: "fas fa-user-friends",
+                images: [
+                    "https://tr.rbxcdn.com/180DAY-1f84140fffd75a98834874349d19d583/768/432/Image/Webp/noFilter"
+                ],
+                gameLink: "https://www.roblox.com/games/136511520856604/Dont-Press-Skibidi-Toilet-Morphs"
             },
             {
                 title: "Custom Kick Message",
