--- a/index.html
+++ b/index.html
@@ -1201,10 +1201,10 @@
                 tags: ["Lua", "DataStore", "UI"],
                 description: "Work In Progress recreation of Discord but on Roblox, currently unfinished. 1:1 Replica of the current Discord UI. Mostly uncoded.",
                 type: "game",
-                image: "https://cdn.discordapp.com/attachments/1374425251718365285/1388882418282270871/image.png?ex=6862990c&is=6861478c&hm=54b1243a6e6aa355ec68939861abcf23edc26bf0b7ba189b834345061a2cc157&",
+                image: "https://i.ibb.co/3yHXt8MT/Rocord.png",
                 icon: "fas fa-user-friends",
                 images: [
-                    "https://cdn.discordapp.com/attachments/1374425251718365285/1388882418282270871/image.png?ex=6862990c&is=6861478c&hm=54b1243a6e6aa355ec68939861abcf23edc26bf0b7ba189b834345061a2cc157&"
+                    "https://i.ibb.co/3yHXt8MT/Rocord.png"
                 ],
                 gameLink: "https://www.roblox.com/games/108293432688169/rocord-v2"
             },
@@ -1227,10 +1227,10 @@
                 tags: ["Building"],
                 description: "Work in Progress recreation of the map Mirage from CS2. This is currently just the outline the finished project will be more detailed. Current screenshot shows old version very unfinished of the map, new version is being worked on.",
                 type: "game",
-                image: "https://cdn.discordapp.com/attachments/1348657462299066398/1389227000459296809/image.png?ex=6863d9f7&is=68628877&hm=9491f47a3cbc280f44a438fab3fc6bab44508095f31c17c07d23b11e396a4b94&",
+                image: "https://i.ibb.co/FZ8RYST/mirage.png",
                 icon: "fas fa-user-friends",
                 images: [
-                    "https://cdn.discordapp.com/attachments/1348657462299066398/1389227000459296809/image.png?ex=6863d9f7&is=68628877&hm=9491f47a3cbc280f44a438fab3fc6bab44508095f31c17c07d23b11e396a4b94&"
+                    "https://i.ibb.co/FZ8RYST/mirage.png"
                 ],
                 gameLink: "https://www.roblox.com/games/13884884683/de-mirage"
             },
@@ -1240,10 +1240,10 @@
                 tags: ["Building"],
                 description: "Simple forest scene made for a client, the scene is fully functional and has a lot of features. The scene is made with a lot of detail and has a lot of trees and bushes. (Current game is privated due to client request)",
                 type: "game",
-                image: "https://cdn.discordapp.com/attachments/1348657462299066398/1389225192320008372/image.png?ex=6863d848&is=686286c8&hm=d2919fd5968eaf93dc47a1d126e1a5d8a010e8520294e85448189f45731852cc&",
+                image: "https://i.ibb.co/rKVsdhBT/foresyt.png",
                 icon: "fas fa-user-friends",
                 images: [
-                    "https://cdn.discordapp.com/attachments/1348657462299066398/1389225192320008372/image.png?ex=6863d848&is=686286c8&hm=d2919fd5968eaf93dc47a1d126e1a5d8a010e8520294e85448189f45731852cc&"
+                    "https://i.ibb.co/rKVsdhBT/foresyt.png"
                 ],
                 gameLink: "https://www.roblox.com/games/123371158212350/building-place"
             },
@@ -1253,10 +1253,10 @@
                 tags: ["Building"],
                 description: "Work In Progress recreation of the map Dust II from CS2. This is currently just the outline the finished project will be more detailed.",
                 type: "game",
-                image: "https://cdn.discordapp.com/attachments/1374425251718365285/1388882016254034091/image.png?ex=686298ac&is=6861472c&hm=b9e19fe99fae423e138b9aa67f4ed4b757df2e0d3d7b5c28853a4fe0b640abfe&",
+                image: "https://i.ibb.co/tpqY3Pzg/Dust.png",
                 icon: "fas fa-user-friends",
                 images: [
-                    "https://cdn.discordapp.com/attachments/1374425251718365285/1388882016254034091/image.png?ex=686298ac&is=6861472c&hm=b9e19fe99fae423e138b9aa67f4ed4b757df2e0d3d7b5c28853a4fe0b640abfe&"
+                    "https://i.ibb.co/tpqY3Pzg/Dust.png"
                 ],
                 gameLink: "https://www.roblox.com/games/15861672687/WIP-Dust-2-CS-GO"
             },
@@ -1279,10 +1279,10 @@
                 tags: ["Lua", "Guns", "Framework"],
                 description: "Unfinished gun framework for Roblox, currently has basic gun functionality and a few guns. This is a framework so it can be used in any game. Not my models but all the code is mine.",
                 type: "game",
-                image: "https://cdn.discordapp.com/attachments/1348657462299066398/1389221930342547669/image.png?ex=6863d53e&is=686283be&hm=adca071a3a60c88aa755cd54671f357fa08660b5d2519961db1f5d451b043f53&",
+                image: "https://i.ibb.co/TDHtqwNm/gun-framework.png",
                 icon: "fas fa-user-friends",
                 images: [
-                    "https://cdn.discordapp.com/attachments/1348657462299066398/1389221930342547669/image.png?ex=6863d53e&is=686283be&hm=adca071a3a60c88aa755cd54671f357fa08660b5d2519961db1f5d451b043f53&"
+                    "https://i.ibb.co/TDHtqwNm/gun-framework.png"
                 ],
                 gameLink: "https://www.roblox.com/games/18162063944/fps-game-2"
             },
