--- a/index.html
+++ b/index.html
@@ -1084,7 +1084,7 @@
                     <div class="contact-method" onclick="window.open('https://www.roblox.com/users/832848277/profile', '_blank')">
                         <i class="fas fa-gamepad"></i>
                         <h3>Roblox</h3>
-                        <p>@rituals._</p>
+                        <p>@chi0sk</p>
                         <button class="copy-btn">Visit Profile</button>
                     </div>
                 </div>
